feat: add screen share for vision model & fix subtitle and ui bugs & update sdk version to 4.66.1

--- a/src/components/AvatarCard/index.module.less
+++ b/src/components/AvatarCard/index.module.less
@@ -138,3 +138,56 @@
         transform: rotate(-90deg);
     }
 }
+
+.button {
+    position: relative;
+    width: max-content !important;
+    height: 24px !important;
+    margin-top: 8px;
+    border-radius: 4px !important;
+    font-size: 12px !important;
+    background: linear-gradient(77.86deg, rgba(229, 242, 255, 0.5) -3.23%, rgba(217, 229, 255, 0.5) 51.11%, rgba(246, 226, 255, 0.5) 98.65%);
+    cursor: pointer;
+
+    .button-text {
+        background: linear-gradient(77.86deg, #3384FF -3.23%, #014BDE 51.11%, #A945FB 98.65%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
+        font-weight: 500;
+        line-height: 20px;
+        text-align: center;
+    }
+}
+
+.button::after {
+    content: '';
+    position: absolute;
+    border-radius: 3px;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 22px;
+    background: white;
+    z-index: -1;
+}
+
+.button::before {
+    content: '';
+    position: absolute;
+    border-radius: 5px;
+    top: -2px;
+    left: -2px;
+    width: calc(100% + 4px);
+    height: 26px;
+    background: linear-gradient(90deg, rgba(0, 139, 255, 0.5) 0%, rgba(0, 98, 255, 0.5) 49.5%, rgba(207, 92, 255, 0.5) 100%);
+    z-index: -2;
+}
+
+.button:hover {
+    background: linear-gradient(77.86deg, rgba(200, 220, 255, 0.7) -3.23%, rgba(190, 210, 255, 0.7) 51.11%, rgba(230, 210, 255, 0.7) 98.65%);
+}
+
+.button:active {
+    background: linear-gradient(77.86deg, rgba(170, 190, 255, 0.9) -3.23%, rgba(160, 180, 255, 0.9) 51.11%, rgba(210, 180, 255, 0.9) 98.65%);
+}
