--- a/src/pages/MainPage/MainArea/Room/index.module.less
+++ b/src/pages/MainPage/MainArea/Room/index.module.less
@@ -172,6 +172,15 @@
     line-height: 22px;
 }
 
+.closed {
+    width: 100%;
+    text-align: center;
+    color: #737A87;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 19.6px;
+}
+
 .btns {
     width: 100%;
     display: flex;
@@ -262,6 +271,10 @@
         border-radius: 8px;
     }
 
+    .camera-player-hidden {
+        display: none !important;
+    }
+
     .camera-placeholder {
         width: 100%;
         display: flex;
@@ -273,6 +286,8 @@
 
         .camera-placeholder-close-note {
             margin-bottom: 8px;
+            width: 60px;
+            height: 60px;
         }
 
         .camera-open-btn {
