feat: support coze bot & update comments & fix some ui bug.

--- a/src/components/AISettings/index.module.less
+++ b/src/components/AISettings/index.module.less
@@ -91,6 +91,12 @@
         flex-direction: column;
         gap: 36px;
 
+        .ai-settings-radio {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+        }
+
         .anchor {
             position: absolute;
             border-bottom: 12px solid white;
@@ -104,6 +110,7 @@
             width: 100%;
             display: flex;
             flex-direction: row;
+            margin-top: -16px;
             gap: 24px;
 
             .ai-settings-wrapper {
