进行了个性化定制，并添加了docker部署文件

--- a/src/pages/MainPage/MainArea/Antechamber/index.module.less
+++ b/src/pages/MainPage/MainArea/Antechamber/index.module.less
@@ -59,11 +59,7 @@
   }
   
   .mobile {
-    background: 
-    /* 图层1 (最上层): 背景图片 */
-    /* url(...) [position] / [size] [repeat] */ url('../../../../assets/img/mobileBg.png')
-        center center / cover no-repeat,
-      /* 图层2 (下层): 渐变背景 */ linear-gradient(167.98deg, #f5f7ff 0%, #faf3ff 100%);
+    background: linear-gradient(167.98deg, #f5f7ff 0%, #faf3ff 100%);
     border-radius: 0;
   }
   
