--- a/src/pages/MainPage/index.module.less
+++ b/src/pages/MainPage/index.module.less
@@ -6,32 +6,26 @@
 .main {
   position: relative;
   width: 100%;
-  height: calc(100% - 48px);
+  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   box-sizing: border-box;
 
   .mainArea {
     position: relative;
-    width: calc(100% - 220px);
+    width: 100%;
     height: 100%;
-    margin-right: 2%;
     background-color: white;
-    border-radius: 16px;
+    border-radius: 0px;
     overflow: hidden;
-    border: 1px solid var(--line-color-border-2, #eaedf1);
+    border: none;
   }
 
   .isMobile {
     width: 100% !important;
     margin-right: 0% !important;
     border-radius: 0px !important;
-  }
-
-  .operationArea {
-    position: relative;
-    width: 200px;
-    height: 100%;
   }
 }
